# rustpi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.md  project.md  report.md  run_commands.md  rustpi.example.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: bus.rs  error.rs  lib.rs  prompt.rs  redaction.rs  run.rs  session.rs  tools.rs  types.rs
crates/agent-core/tests/: lifecycle_integration.rs
crates/auth-core/: Cargo.toml
crates/auth-core/src/: api_key.rs  device_flow.rs  encrypted_store.rs  error.rs  lib.rs  oauth.rs  provider.rs  record.rs  refresh.rs  token.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  error.rs  executor.rs  lib.rs  main.rs  output.rs
crates/cli/src/commands/: auth.rs  context.rs  diag.rs  metrics.rs  mod.rs  replay.rs  run.rs  session.rs  sessions.rs  status.rs
crates/cli/tests/: cli_tests.rs
crates/config-core/: Cargo.toml
crates/config-core/src/: error.rs  lib.rs  loader.rs  model.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: compactor.rs  engine.rs  error.rs  ignore.rs  lib.rs  memory.rs  packer.rs  relevance.rs  scanner.rs  tokens.rs  workset.rs
crates/context-engine/tests/: context_engine_integration.rs
crates/event-log/: Cargo.toml
crates/event-log/src/: error.rs  file_store.rs  lib.rs  memory_store.rs  record.rs  replay.rs  store.rs
crates/event-log/tests/: replay_tests.rs
crates/memory-sync/: Cargo.toml
crates/memory-sync/src/: docs.rs  error.rs  lib.rs  markdown.rs  memory.rs  personality.rs  qdrant.rs  sync.rs  vault.rs
crates/memory-sync/tests/: integration.rs  qdrant_tests.rs
crates/model-adapters/: Cargo.toml
crates/model-adapters/src/: capability.rs  error.rs  lib.rs  provider.rs  registry.rs  wire.rs
crates/model-adapters/src/adapters/: copilot.rs  echo.rs  llamacpp.rs  mod.rs  openai.rs  tests.rs  vllm.rs
crates/observability/: Cargo.toml
crates/observability/src/: collector.rs  error.rs  lib.rs  provider.rs  summary.rs  tokens.rs  tools.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: decision.rs  error.rs  lib.rs  policy.rs  request.rs
crates/rpc-api/: Cargo.toml
crates/rpc-api/src/: dispatch.rs  error.rs  lib.rs  normalize.rs  protocol.rs  provider_factory.rs  server.rs  transport.rs
crates/rpc-api/tests/: integration.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: error.rs  factory.rs  lib.rs  postgres.rs  recovery.rs  sled_store.rs  sqlite.rs  startup.rs  store.rs
crates/session-store/tests/: integration.rs  recovery_tests.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: approval.rs  audit.rs  command_policy.rs  error.rs  lib.rs  overwrite_policy.rs  path_safety.rs  registry.rs  runner.rs  schema.rs  subprocess.rs
crates/tool-runtime/src/tools/: edit.rs  file.rs  mod.rs  search.rs  shell.rs
crates/tool-runtime/tests/: failure_modes.rs  tool_runtime_integration.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  input.rs  layout.rs  lib.rs  main.rs  state.rs  theme.rs
crates/tui/src/panes/: auth.rs  context.rs  conversation.rs  datasources.rs  logs.rs  mod.rs  session.rs  tools.rs
crates/tui/tests/: tui_tests.rs
docs/: architecture.md
docs/adr/: 0001-runtime-event-model.md  0002-provider-abstraction.md  0003-tool-execution-model.md  0004-memory-layering.md  0005-obsidian-sync-model.md  0006-auth-token-handling.md
docs/testing/: cli-tui-checklist.md  memory-sync-checklist.md  release-readiness-checklist.md
prompt/: phase10prompt.md  phase11prompt.md  phase12prompt.md  phase13prompt.md  phase14prompt.md  phase8prmpt.md  phase9prompt.md
