[package]
name = "auth-core"
version = "0.1.0"
edition = "2021"
description = "Shared auth subsystem: OAuth, device flow, API key, token refresh, encrypted persistence"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
