[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Scriptable CLI interface for the agent runtime"

[[bin]]
name = "rustpi"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
config-core = { path = "../config-core" }
rpc-api = { path = "../rpc-api" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
