[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Scriptable CLI interface for the agent runtime"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "rustpi"
path = "src/main.rs"

[[test]]
name = "cli_tests"
path = "tests/cli_tests.rs"

[dependencies]
agent-core = { path = "../agent-core" }
observability = { path = "../observability" }
auth-core = { path = "../auth-core" }
config-core = { path = "../config-core" }
context-engine = { path = "../context-engine" }
memory-sync = { path = "../memory-sync" }
event-log = { path = "../event-log" }
session-store = { path = "../session-store" }
model-adapters = { path = "../model-adapters" }
chrono = { workspace = true }
rpc-api = { path = "../rpc-api" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
