[package]
name = "context-engine"
version = "0.1.0"
edition = "2021"
description = "Context assembly: filesystem scanner, ignore rules, relevance scoring, token-budget packing"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
