[package]
name = "context-engine"
version = "0.1.0"
edition = "2021"
description = "Context assembly: filesystem scanner, ignore rules, relevance scoring, token-budget packing"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
