[package]
name = "event-log"
version = "0.1.0"
edition = "2021"
description = "Append-only structured event log with JSONL storage and replay reader"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
