[package]
name = "memory-sync"
version = "0.1.0"
edition = "2021"
description = "Synchronization between structured session store and Obsidian vault memory"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
