[package]
name = "memory-sync"
version = "0.1.0"
edition = "2021"
description = "Synchronization between structured session store and Obsidian vault memory"

[dependencies]
agent-core = { path = "../agent-core" }
context-engine = { path = "../context-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
qdrant-client = { version = "1.13", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
