[package]
name = "observability"
version = "0.1.0"
edition = "2021"
description = "Telemetry, metrics, and observability for the agent runtime"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
