[package]
name = "rpc-api"
version = "0.1.0"
edition = "2021"
description = "stdin/stdout JSONL RPC protocol for machine-to-machine agent control"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
