[package]
name = "rpc-api"
version = "0.1.0"
edition = "2021"
description = "stdin/stdout JSONL RPC protocol for machine-to-machine agent control"

[dependencies]
agent-core = { path = "../agent-core" }
session-store = { path = "../session-store" }
event-log = { path = "../event-log" }
model-adapters = { path = "../model-adapters" }
tool-runtime = { path = "../tool-runtime" }
auth-core = { path = "../auth-core" }
config-core = { path = "../config-core" }
policy-engine = { path = "../policy-engine" }
context-engine = { path = "../context-engine" }
memory-sync = { path = "../memory-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
