[package]
name = "tui"
version = "0.1.0"
edition = "2021"
description = "Ratatui-based interactive TUI for the agent runtime"

[[bin]]
name = "rustpi-tui"
path = "src/main.rs"

[[test]]
name = "tui_tests"
path = "tests/tui_tests.rs"

[dev-dependencies]
uuid = { workspace = true }

[dependencies]
agent-core = { path = "../agent-core" }
config-core = { path = "../config-core" }
rpc-api = { path = "../rpc-api" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
